--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./pages/index.css">
     <title>Document</title>
 </head>
 
-<body>
-    <Header></Header>
+<body class="page">
+    <div>
+        <Header>
+            <h1>Hello</h1>
+            <p>hi world</p>
+        </Header>
+        <main>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </main>
+        <footer>
+            <nav>
+
+            </nav>
+        </footer>
+    </div>
 </body>
 
 </html>
