--- a/index.html
+++ b/index.html
@@ -55,19 +55,21 @@
                 <li>Аэропортов 241</li>
             </ul>
         </section>
-        <section class="photo-grid">
-            <img class="photo-grid__img" src="./image/__item1.png" alt="Поезд">
-            <img class="photo-grid__img" src="./image/__item2.png" alt="Уллу-Тау">
-            <img class="photo-grid__img" src="./image/__item-9.png" alt="Стог сена">
-            <img class="photo-grid__img" src="./image/__item-8.png" alt="Туман">
-            <img class="photo-grid__img" src="./image/__item-7.png" alt="Замерзший водоем">
-            <img class="photo-grid__img" src="./image/__item-6.png" alt="Озеро">
-            <img class="photo-grid__img" src="./image/__item-5.png" alt="Эльбрус">
-            <img class="photo-grid__img" src="./image/__item-4.png" alt="Дорожный знак">
-            <img class="photo-grid__img" src="./image/__item-3.png" alt="Камчатка">
-            <img class="photo-grid__img" src="./image/__item-2.png" alt="Камчатка-2">
-            <img class="photo-grid__img" src="./image/__item-1.png" alt="Байкал">
-            <img class="photo-grid__img" src="./image/__item.png" alt="Эргаки">
+        <section class="photo">
+            <ul class="photo-grid">
+                <li> <img class="photo-grid__img" src="./image/__item1.png" alt="Поезд"></li>
+                <li> <img class="photo-grid__img" src="./image/__item2.png" alt="Уллу-Тау"></li>
+                <li><img class="photo-grid__img" src="./image/__item-9.png" alt="Стог сена"></li>
+                <li><img class="photo-grid__img" src="./image/__item-8.png" alt="Туман"></li>
+                <li><img class="photo-grid__img" src="./image/__item-7.png" alt="Замерзший водоем"></li>
+                <li><img class="photo-grid__img" src="./image/__item-6.png" alt="Озеро"></li>
+                <li><img class="photo-grid__img" src="./image/__item-5.png" alt="Эльбрус"></li>
+                <li> <img class="photo-grid__img" src="./image/__item-4.png" alt="Дорожный знак"></li>
+                <li><img class="photo-grid__img" src="./image/__item-3.png" alt="Камчатка"></li>
+                <li><img class="photo-grid__img" src="./image/__item-2.png" alt="Камчатка-2"></li>
+                <li> <img class="photo-grid__img" src="./image/__item-1.png" alt="Байкал"></li>
+                <li> <img class="photo-grid__img" src="./image/__item.png" alt="Эргаки"></li>
+            </ul>
         </section>
         <section class="places">
 
@@ -145,16 +147,23 @@
             </div>
 
         </section>
+
         <section class="cover">
-            <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala"><img src="./image/__background.png" alt=""></a>
-            <h4 class="cover__title">До Байкала «на собаках»</h4>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+                <h4 class="cover__title">До Байкала «на собаках»</h4>
+                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            </a>
         </section>
     </main>
-    <footer>
-        <nav>
-
+    <footer class="footer">
+        <nav class="footer__links">
+            <a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a>
+            <a class="footer__link" target="_blank" href="https://yandex.ru/pogoda">Погода</a>
+            <a class="footer__link" target="_blank" href="https://rasp.yandex.ru">Расписание</a>
+            <a class="footer__link" target="_blank" href="https://calendar.yandex.ru">Календарь</a>
+            <a class="footer__link" target="_blank" href="https://travel.yandex.ru">Путешествия</a>
         </nav>
+        <p class="footer__copyright">&copy;Александр Садыков</p>
     </footer>
 
 </body>
