--- a/index.html
+++ b/index.html
@@ -9,63 +9,65 @@
 </head>
 
 <body class="page">
-
+    <!-- Блок header -->
     <header class="header">
         <div class="header__logo"></div>
         <div class="header__lang-item">
-            <label class=" header__pseudo-object">
-                <input class="header__radio" type="radio" name="radio" id="ru" checked>
-                <span class="header__lang-link" > Ru</span>
-              </label>
-
-            <label class="header__pseudo-object">
-                <input class="header__radio" type="radio" name="radio" id="en" >
-                <span class=" header__lang-link">En</span>
-               </label>
+            <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
+            <a class="header__lang-link" href="#">En</a>
         </div>
 
     </header>
     <main>
+        <!-- Блок lead -->
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
             <figure class="lead__figure">
-                <img class="lead__image" src="./image/__image.png" alt="Маршрут">
+                <img class="lead__image" src="./image/__image.png" alt="Уютное путешествие на поезде от Пскова до Улан-Удэ.">
                 <figcaption class="lead__figcaption">ваша полка — верхняя</figcaption>
             </figure>
         </section>
+
+        <!-- Блок Intro -->
+
         <section class="intro">
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и
                 суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в
                 свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
-                <li class="intro__list-tiem">Часовых поясов 11</li>
-                <li>Объектов природного наследия ЮНЕСКО 12</li>
-                <li>Объектов культурного наследия ЮНЕСКО 16</li>
-                <li>Природных заповедников 105</li>
-                <li>Аэропортов 241</li>
+                <li>Часовых поясов <span class="intro__list-digits">11</span> </li>
+                <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-digits">12</span></li>
+                <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-digits">16</span></li>
+                <li>Природных заповедников <span class="intro__list-digits">105</span></li>
+                <li>Аэропортов <span class="intro__list-digits">241</span></li>
             </ul>
         </section>
-        <div>
-            <ul class="photo-grid">
-                <li> <img class="photo-grid__img" src="./image/__item1.png" alt="Поезд"></li>
-                <li> <img class="photo-grid__img" src="./image/__item2.png" alt="Уллу-Тау"></li>
-                <li><img class="photo-grid__img" src="./image/__item-9.png" alt="Стог сена"></li>
-                <li><img class="photo-grid__img" src="./image/__item-8.png" alt="Туман"></li>
-                <li><img class="photo-grid__img" src="./image/__item-7.png" alt="Замерзший водоем"></li>
-                <li><img class="photo-grid__img" src="./image/__item-6.png" alt="Озеро"></li>
-                <li><img class="photo-grid__img" src="./image/__item-5.png" alt="Эльбрус"></li>
-                <li> <img class="photo-grid__img" src="./image/__item-4.png" alt="Дорожный знак"></li>
-                <li><img class="photo-grid__img" src="./image/__item-3.png" alt="Камчатка"></li>
-                <li><img class="photo-grid__img" src="./image/__item-2.png" alt="Камчатка-2"></li>
-                <li> <img class="photo-grid__img" src="./image/__item-1.png" alt="Байкал"></li>
-                <li> <img class="photo-grid__img" src="./image/__item.png" alt="Эргаки"></li>
+
+        <!-- Блок "Фото-грид" -->
+
+        <section class="photo-grid">
+            <img class="photo-grid__item" src="./image/__item1.png" alt="Поезд">
+            <img class="photo-grid__item" src="./image/__item2.png" alt="Уллу-Тау">
+            <img class="photo-grid__item" src="./image/__item-9.png" alt="Стог сена">
+            <img class="photo-grid__item" src="./image/__item-8.png" alt="Туман">
+            <img class="photo-grid__item" src="./image/__item-7.png" alt="Замерзший водоем">
+            <img class="photo-grid__item" src="./image/__item-6.png" alt="Озеро">
+            <img class="photo-grid__item" src="./image/__item-5.png" alt="Эльбрус">
+            <img class="photo-grid__item" src="./image/__item-4.png" alt="Дорожный знак">
+            <img class="photo-grid__item" src="./image/__item-3.png" alt="Камчатка">
+            <img class="photo-grid__item" src="./image/__item-2.png" alt="Камчатка-2">
+            <img class="photo-grid__item" src="./image/__item-1.png" alt="Байкал">
+            <img class="photo-grid__item" src="./image/__item.png" alt="Эргаки">
             </ul>
-        </div>
+        </section>
+
+        <!-- Блок place -->
+
         <section class="places">
 
-            <div class="place">
+            <article class="place">
                 <h3 class="place__title">Куршская коса</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
@@ -73,11 +75,11 @@
                 </div>
                 <img class="place__image" src="./image/Куршская-коса.png" alt="Куршская коса">
                 <div class="place__paragraph">
-                    <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-                    <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних
+                    <p class="place__paragraph-item">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+                    <p class="place__paragraph-item">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних
                         мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
                 </div>
-            </div>
+            </article>
 
             <article class="place">
                 <h3 class="place__title">Кольский</h3>
@@ -88,13 +90,13 @@
                 </div>
 
                 <div class="place__paragraph">
-                    <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                    <p>Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную
+                    <p class="place__paragraph-item">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                    <p class="place__paragraph-item">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную
                         кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
                 </div>
             </article>
 
-            <div class="place">
+            <article class="place">
                 <h3 class="place__title">Алтай</h3>
                 <img class="place__image" src="./image/Алтай.png" alt="Алтай">
                 <div class="place__website">
@@ -102,12 +104,12 @@
                     <a class="place__link" target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
                 </div>
                 <div class="place__paragraph">
-                    <p>Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом
+                    <p class="place__paragraph-item">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом
                         здешних мест — горным воздухом.</p>
-                    <p>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже
+                    <p class="place__paragraph-item">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже
                         обитатели Алтайского края.</p>
                 </div>
-            </div>
+            </article>
 
             <div class="place">
                 <h3 class="place__title">Зимний Байкал</h3>
@@ -117,13 +119,13 @@
                     <a class="place__link" target="_blank" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
                 </div>
                 <div class="place__paragraph">
-                    <p>Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-                    <p>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
+                    <p class="place__paragraph-item">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+                    <p class="place__paragraph-item">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
                         фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                 </div>
             </div>
 
-            <div class="place">
+            <article class="place">
                 <h3 class="place__title">Карелия</h3>
                 <img class="place__image" src="./image/Карелия.png" alt="Карелия">
                 <div class="place__website">
@@ -131,21 +133,25 @@
                     <a class="place__link" target="_blank" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
                 </div>
                 <div class="place__paragraph">
-                    <p>Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали
+                    <p class="place__paragraph-item">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали
                         топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                 </div>
-            </div>
-
+            </article>
         </section>
+
+        <!-- Блок Cover -->
 
         <section class="cover">
             <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-                <h4 class="cover__title">До Байкала «на собаках»</h4>
+                <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
             </a>
         </section>
     </main>
+
+    <!-- Блок "Футер" -->
+
     <footer class="footer">
         <nav class="footer__links">
             <a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a>
